# axl.gl

./: .gitmodules  CMakeLists.txt  COPYING  LICENSE  README.md
include/axl.gl/: Application.hpp  Context.hpp  ContextObject.hpp  Display.hpp  View.hpp  cameras.hpp  everything.hpp  gfx.hpp  inputs.hpp  lib.hpp  projections.hpp
include/axl.gl/camera/: Camera3D.hpp
include/axl.gl/gfx/: Camera.hpp  RenderTarget.hpp  Texture2D.hpp  UI.hpp  buffers.hpp  shaders.hpp  text.hpp  textures.hpp
include/axl.gl/gfx/UI/: Component.hpp  Container.hpp  Element.hpp  Group.hpp  Layout.hpp  TextView.hpp  UIElement.hpp  UIFrameBuffer.hpp  UIManager.hpp
include/axl.gl/gfx/UI/elements/: Button.hpp  Slider.hpp  TextInput.hpp  TextView.hpp
include/axl.gl/gfx/UI/layouts/: Grid.hpp  Linear.hpp  Split.hpp
include/axl.gl/gfx/buffer/: FrameBuffer.hpp  RenderBuffer.hpp
include/axl.gl/gfx/shader/: Program.hpp  Shader.hpp
include/axl.gl/gfx/text/: Font.hpp  Text.hpp
include/axl.gl/gfx/texture/: Texture.hpp  Texture1D.hpp  Texture2D.hpp  Texture3D.hpp
include/axl.gl/input/: Key.hpp  KeyCodes.hpp  Keyboard.hpp  Mouse.hpp  Touch.hpp
include/axl.gl/projection/: Orthographic.hpp  Perspective.hpp  Projection.hpp
src/: Application.cpp  CMakeLists.txt  Context.cpp  ContextObject.cpp  Display.cpp  View.cpp  lib.cpp
src/camera/: Camera3D copy.cpp  Camera3D.cpp
src/gfx/: Camera.cpp  RenderTarget.cpp  Texture2D.cpp
src/gfx/UI/: Component.cpp  Container.cpp  Element.cpp  Group.cpp  Layout.cpp  TextView.cpp  UIElement.cpp  UIFrameBuffer.cpp  UIManager.cpp
src/gfx/UI/elements/: Button.cpp  Slider.cpp  TextInput.cpp  TextView.cpp
src/gfx/UI/layouts/: Grid.cpp  Linear.cpp  Split.cpp
src/gfx/buffer/: FrameBuffer.cpp  RenderBuffer.cpp
src/gfx/shader/: Program.cpp  Shader.cpp
src/gfx/text/: Font.cpp  Text.cpp
src/gfx/texture/: Texture.cpp  Texture1D.cpp  Texture2D.cpp  Texture3D.cpp
src/input/: Key.cpp  Keyboard.cpp  Mouse.cpp  Touch.cpp
src/input/win32/: Keyboard.cpp  Mouse.cpp  Touch.cpp  common.hpp  defs.h
src/projection/: Orthographic.cpp  Perspective.cpp  Projection.cpp
src/win32/: Application.cpp  Context.cpp  Display.cpp  DisplayData.hpp  View.cpp  ViewData.hpp  common.hpp
tests/: Assert.hpp  Base.cpp  CMakeLists.txt  Camera3D.cpp  Context.cpp  Display.cpp  File.cpp  File.hpp  Font.cpp  GLC.cpp  GLC.h  Projection.cpp  RenderBuffer.cpp  RenderToTexture.cpp  Shader.cpp  Text.cpp  TextView.cpp  Texture3D.cpp  UIButton.cpp  UIComponent.cpp  UIContainer.cpp  UIElement.cpp  UIManager.cpp  UISlider.cpp  UITextInput.cpp  UITextView.cpp  View.cpp  Viewports.cpp  lib.cpp
tests/common/: Assert.hpp  GL.cpp  GL.hpp  Legacy.h  MainView.cpp  MainView.hpp  Quad.cpp  Quad.hpp  stdafx.hpp
tests/shaders/330/: basic_v.frag  basic_v.vert  basic_vpvm.frag  basic_vpvm.vert  basic_vpvms.frag  font_vpvms.frag  shader_test.frag  shader_test.vert  text_vpvms.frag  text_vpvms.vert  text_vuPVMs.frag  text_vuPVMs.vert
